Migrate to jdk15